@@ -1,3 +1,7 @@
+1996-09-24  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/copy/src/copy.c: add -U option
+
 1996-08-25  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/copy/src/copy.c:
